[gd_scene load_steps=28 format=3 uid="uid://c0pputdh413d2"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_cnmc8"]
[ext_resource type="Texture2D" uid="uid://4teicuy80m5s" path="res://Sprites/Player/idle.png" id="2_gem2p"]
[ext_resource type="Texture2D" uid="uid://ncj2gxngsmqx" path="res://Sprites/Player/Head/head_blue.png" id="2_o3sux"]
[ext_resource type="Texture2D" uid="uid://ors7h3qeusja" path="res://Sprites/Player/moving.png" id="3_d0xnh"]
[ext_resource type="Texture2D" uid="uid://8ukev0qf52qt" path="res://Sprites/Player/idle_holding.png" id="3_jkles"]
[ext_resource type="Texture2D" uid="uid://bfqbuxol1t2yq" path="res://Sprites/Player/Head/head_grey.png" id="3_p88lq"]
[ext_resource type="Texture2D" uid="uid://dexfcu1lx8qsu" path="res://Sprites/Player/Head/head_red.png" id="4_1oh8l"]
[ext_resource type="Texture2D" uid="uid://ch0nksfxgx4r6" path="res://Sprites/Player/moving_holding.png" id="5_dhhi1"]
[ext_resource type="Texture2D" uid="uid://b1s6wgvw3uwgf" path="res://Sprites/R to Reset.png" id="9_xvydc"]
[ext_resource type="AudioStream" uid="uid://b3x15k4yysduf" path="res://Sound/painted.mp3" id="10_o8c35"]
[ext_resource type="AudioStream" uid="uid://052xtu8fvi1r" path="res://Sound/jump.mp3" id="11_ti8p4"]
[ext_resource type="AudioStream" uid="uid://cxjbce425dbwd" path="res://Sound/press.mp3" id="12_vlu1d"]
[ext_resource type="AudioStream" uid="uid://ccytgggat7152" path="res://Sound/footsteps.mp3" id="13_ck4rg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s04a"]
size = Vector2(40, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_bypv4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o3sux")
}],
"loop": true,
"name": &"Blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_p88lq")
}],
"loop": true,
"name": &"Grey",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1oh8l")
}],
"loop": true,
"name": &"Red",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2ndd"]
atlas = ExtResource("2_gem2p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uffhp"]
atlas = ExtResource("2_gem2p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2tpi"]
atlas = ExtResource("3_jkles")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmjt"]
atlas = ExtResource("3_jkles")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wompq"]
atlas = ExtResource("3_d0xnh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pxwr"]
atlas = ExtResource("3_d0xnh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdde3"]
atlas = ExtResource("5_dhhi1")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vybct"]
atlas = ExtResource("5_dhhi1")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1xyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2ndd")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_uffhp")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2tpi")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5tmjt")
}],
"loop": true,
"name": &"Idle_Holding",
"speed": 3.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_uffhp")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_5tmjt")
}],
"loop": true,
"name": &"Jump_Holding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wompq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pxwr")
}],
"loop": true,
"name": &"Moving",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdde3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vybct")
}],
"loop": true,
"name": &"Moving_Holding",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8rvd"]
size = Vector2(63, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhjus"]
size = Vector2(46, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ovoy"]
size = Vector2(48, 48)

[node name="Player" type="CharacterBody2D"]
collision_layer = 21
collision_mask = 17
script = ExtResource("1_cnmc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_6s04a")

[node name="HeadSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -13)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bypv4")
animation = &"Grey"
autoplay = "Grey"

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_h1xyl")
animation = &"Jump"
autoplay = "Idle"

[node name="PickupArea" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("RectangleShape2D_s8rvd")
debug_color = Color(0.967356, 1.63645e-06, 0.474771, 0.42)

[node name="WallDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 11

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallDetection"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_bhjus")
debug_color = Color(0.810489, 0.00215337, 0.98575, 0.42)

[node name="GoalDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalDetection"]
shape = SubResource("RectangleShape2D_5ovoy")
debug_color = Color(0.269088, 0.632918, 5.77569e-07, 0.42)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
texture_repeat = 1
position = Vector2(1069, 629)
texture = ExtResource("9_xvydc")

[node name="PaintSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_o8c35")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ti8p4")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_vlu1d")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ck4rg")

[connection signal="area_entered" from="GoalDetection" to="." method="_on_goal_detection_area_entered"]
